--- a/playbook.yml
+++ b/playbook.yml
@@ -1,6 +1,6 @@
 ---
 - name: Copy jar file to remoter server
-  hosts: remoteserver
+  hosts: all
   tasks:
     - copy:
         src: ./target/mini_project-1.0-SNAPSHOT-jar-with-dependencies.jar
